fix stack problems, adding Cloudinary to manage image upload, fix manhwa lasted display

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,6 +1,12 @@
+# Mysql
 DB_HOST=localhost
 DB_USER=db_name
 DB_PASSWORD="test"
 DB_NAME=db_name
 JWT_SECRET=password123
 PORT=3
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=name
+CLOUDINARY_API_KEY=123456789012345
+CLOUDINARY_API_SECRET=abcdefghijklmnopqrstuvwxyz
