add new endpoint for checkpoint wich will be used by the extension and also small fix

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
